# FoodSearchEngine

./: .gitignore  README.md
client/: .env  .firebaserc  package-lock.json  package.json
client/.firebase/: hosting.YnVpbGQ.cache  hosting.cHVibGlj.cache
client/src/: App.js  helpers.js  index.js
client/src/Routes/: mainRouter.js
client/src/Utils/: menuLinks.js  routes.js
client/src/components/AppButton/: AppButton.js
client/src/components/ImageUpload/: ImageUpload.js
client/src/components/Logo/: Logo.js
client/src/components/Modal/: Modal.js
client/src/components/Product/: Product.js
client/src/components/ProductList/: ProductList.js
client/src/components/Search/: Search.js  Search.module.css
client/src/components/templates/: ProductModelTemplate.js
client/src/constants/: constants.js
client/src/containers/CreateProductFrom/: CreateProduct.js
client/src/firebase/: firebase.js
client/src/hooks/: useAuth.js  useProducts.js
client/src/models/: ProductModel.js  UserModel.js
cloud-functions/functions/: .env  index.js  package-lock.json  package.json  productCategories.js  twilio-test.js
cloud-functions/functions/twilio/: sendSMS.js
server.bak/: .env  .gitignore  .gitlab-ci.yml
server/app/: main.py  pyproject.toml
server/app/api/endpoints/: products.py
server/app/config/: firebase.py  settings.py
server/app/db/: firebase.py
server/app/db/repository/: __init__.py  firebase.py
server/app/domain/: product.py
server/app/repository/abstract/: abstract.py  firebase.py
server/docker/: docker-compose.yml  dockerfile.server
(+10 files in other folders)
