[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["m.lyamets <m.lyamets@innopolis.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
firebase = "^3.0.1"
pydantic = "^1.10.2"
fastapi = "^0.86.0"
loguru = "^0.6.0"
firebase-admin = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
